avance respuesta de menú en endpoint iniciar sesión